2011-09-25  Ira Rosen  <ira.rosen@linaro.org>

	* gcc.dg/vect/bb-slp-24.c: New.

2011-09-24  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/nsdmi-eh1.C: New.

	* g++.dg/cpp0x/nsdmi-defer3.C: New.

	* g++.dg/cpp0x/nsdmi-defer1.C: New.
	* g++.dg/cpp0x/nsdmi-defer2.C: New.

	* g++.dg/cpp0x/nsdmi1.C: New.
	* g++.dg/cpp0x/nsdmi2.C: New.
	* g++.dg/cpp0x/nsdmi3.C: New.
	* g++.dg/cpp0x/nsdmi4.C: New.
	* g++.old-deja/g++.other/init4.C: New.

2011-09-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/44267
	* g++.dg/template/sfinae28.C: New.

2011-09-23  Ian Lance Taylor  <iant@google.com>

	* go.test/go-test.exp (errchk): Handle more cases of getting
	correct Tcl backslash quoting in regular expressions in test file.

2011-09-23  Jason Merrill  <jason@redhat.com>

	Core 253
	* g++.dg/init/const8.C: New.
	* g++.dg/cpp0x/constexpr-object1.C: Add a data member.
	* g++.dg/cpp0x/defaulted2.C: Likewise.
	* g++.dg/cpp0x/pr42844-2.C: Likewise.
	* g++.dg/init/pr20039.C: Likewise.
	* g++.dg/init/pr42844.C: Likewise.

2011-09-23  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/ipa/inline-1.c: new testcase.
	* gcc.dg/ipa/inline-2.c: new testcase.
	* gcc.dg/ipa/inline-3.c: new testcase.
	* gcc.dg/ipa/inline-4.c: new testcase.

2011-09-23  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50258
	* g++.dg/cpp0x/constexpr-static8.C: New.

2011-09-23  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/i386/avxfp-1.c: New test.
	* gcc.target/i386/avxfp-2.c: New test.

2011-09-23  Terry Guo  <terry.guo@arm.com>

	* gcc.c-torture/execute/941014-1.x: Deleted.

2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50491
	* g++.dg/cpp0x/pr50491.C: New.

2011-09-22  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR testsuite/50487
	* gfortran.dg/bessel_6.f90: Fix tolerance test.

2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50371
	* g++.dg/cpp0x/nullptr24.C: New.

2011-09-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/50482
	* gcc.target/i386/pr50482.c: New test.
