@@ -1,3 +1,8 @@
+2011-09-25  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50280
+	* g++.dg/template/bitfield1.C: New.
+
 2011-09-25  Ira Rosen  <ira.rosen@linaro.org>
 
 	* gcc.dg/vect/bb-slp-24.c: New.
